# fl-wasm

./: .gitignore
.github/workflows/: fl-wasm-rs.yml  macros.yml
c/: .gitignore  Makefile  README.md  function_wasm.c  hello.c  macro.c
examples/: http_call.rs  simple_fn.rs
fl-wasm-rs/: Cargo.toml  README.md
fl-wasm-rs/src/: function_wasm.rs  http.rs  lib.rs  prelude.rs
go/: README.md  go.mod  imports.go  invoke.go  lib.go
macros/: Cargo.toml  README.md
macros/src/: lib.rs
rs/fl-wasm-rs/: Cargo.toml
rs/fl-wasm-rs/src/: error.rs
rs/macros/src/: lib.rs
rust/: README.md
rust/examples/hello/: Cargo.toml
rust/examples/http/: Cargo.toml
rust/examples/http/src/: lib.rs
rust/fl-wasm-rs/: Cargo.toml
rust/fl-wasm-rs/src/: http.rs  prelude.rs
rust/macros/: README.md
