[package]
name = "fl-wasm-rs"
version = "0.1.1"
edition = "2021"
authors = [ "The FunLess Team" ]
license = "Apache-2.0"
description = "Runtime library for FunLess functions"
homepage = "https://github.com/funlessdev/fl-wasm"
repository = "https://github.com/funlessdev/fl-wasm"
documentation = "https://docs.rs/fl-wasm-rs"
readme = "README.md"
# MSRV
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fl-wasm-rs-macros = { path = "../macros",  version = "0.1.0" }
thiserror = "1.0"
cfg-if = "1.0"
serde_json = "1.0.85"
